[workspace]
members = [
    "crates/kinit-kt",
    "crates/klist",
    "crates/kerbeiros",
    "crates/kerberos-asn1",
    "crates/kerberos-ccache",
    "crates/kerberos-constants",
    "crates/kerberos-crypto",
    "crates/kerberos-keytab",
    "crates/mit-krb5-ccache",
    "crates/red-asn1",
    "crates/red-asn1-derive",
]
resolver = "2"

[workspace.package]
license = "AGPL-3.0"
edition = "2024"
repository = "https://gitee.com/awol2010ex/rust-kinit"
