[package]
name = "awol2005ex3-kerbeiros"
version = "0.4.1"
edition.workspace = true
description = "Kerberos client library (with MS-KDC bug fixes)"
license.workspace = true
repository.workspace = true

[dependencies]
ascii = "=1.1.0"
chrono = "=0.4.39"
dns-lookup = "=2.1.1"
getset = "=0.1.7"
kerberos-asn1 = { path = "../kerberos-asn1", package = "awol2005ex3-kerberos-asn1" }
kerberos-ccache = { path = "../kerberos-ccache", package = "awol2005ex3-kerberos-ccache" }
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants" }
kerberos-crypto = { path = "../kerberos-crypto", package = "awol2005ex3-kerberos-crypto" }
rand = "=0.8.6"
thiserror = "=1.0.69"

[lints.clippy]
needless_return = "allow"
