[package]
name = "awol2005ex3-kerberos-asn1"
version = "0.4.2"
edition.workspace = true
description = "Kerberos ASN.1 types"
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "=0.4.39"
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants" }
red-asn1 = { path = "../red-asn1", package = "awol2005ex3-red-asn1" }
red-asn1-derive = { path = "../red-asn1-derive", package = "awol2005ex3-red-asn1-derive" }
