[package]
name = "kerberos-ccache"
version = "0.4.1"
edition = "2024"
description = "Kerberos credential cache (CCache) format library"
license = "AGPL-3.0"

[dependencies]
chrono = "=0.4.39"
failure_derive = "=0.1.8"
kerberos-asn1 = { path = "../kerberos-asn1" }
kerberos-constants = { path = "../kerberos-constants" }
nom = "=7.1.3"
thiserror = "=1.0.69"
