[package]
name = "awol2005ex3-kerberos-ccache"
version = "0.4.1"
edition.workspace = true
description = "Kerberos credential cache (CCache) format library"
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "=0.4.39"
failure_derive = "=0.1.8"
kerberos-asn1 = { path = "../kerberos-asn1", package = "awol2005ex3-kerberos-asn1", version = "0.4.2" }
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants", version = "0.4.1" }
nom = "=7.1.3"
thiserror = "=1.0.69"
