[package]
name = "awol2005ex3-kerberos-crypto"
version = "0.4.1"
edition.workspace = true
description = "Kerberos cryptography operations"
license.workspace = true
repository.workspace = true

[dependencies]
aes = "=0.8.4"
cbc = { version = "=0.1.2", features = ["alloc"] }
chrono = "=0.4.39"
digest = "=0.10.7"
ecb = { version = "=0.1.2", features = ["alloc"] }
hmac = "=0.12.1"
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants", version = "0.4.1" }
md-5 = "=0.10.6"
md4 = "=0.10.2"
num = "=0.4.3"
pbkdf2 = { version = "=0.12.2", features = ["simple"] }
rand = "=0.8.6"
rc4 = "=0.1.0"
sha-1 = "=0.10.1"
thiserror = "=1.0.69"

[lints.clippy]
needless_return = "allow"
