[package]
name = "awol2005ex3-kerberos-keytab"
version = "0.4.1"
edition.workspace = true
description = "Kerberos keytab format library"
license.workspace = true
repository.workspace = true

[dependencies]
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants", version = "0.4.1" }
nom = "=7.1.3"

[dev-dependencies]
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants", version = "0.4.1" }
