[package]
name = "awol2005ex3-kinit-kt"
version = "0.1.1"
edition.workspace = true
description = "Rust kinit -kt implementation"
license.workspace = true
repository.workspace = true

[lib]
name = "kinit_kt"
path = "src/lib.rs"

[[bin]]
name = "kinit"
path = "src/main.rs"

[dependencies]
ascii = "=1.1.0"
chrono = "=0.4.39"
kerberos-asn1 = { path = "../kerberos-asn1", package = "awol2005ex3-kerberos-asn1", version = "0.4.2" }
kerbeiros = { path = "../kerbeiros", package = "awol2005ex3-kerbeiros", version = "0.4.1" }
kerberos-ccache = { path = "../kerberos-ccache", package = "awol2005ex3-kerberos-ccache", version = "0.4.1" }
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants", version = "0.4.1" }
kerberos-crypto = { path = "../kerberos-crypto", package = "awol2005ex3-kerberos-crypto", version = "0.4.1" }
kerberos-keytab = { path = "../kerberos-keytab", package = "awol2005ex3-kerberos-keytab", version = "0.4.1" }
mit-krb5-ccache = { path = "../mit-krb5-ccache", package = "awol2005ex3-mit-krb5-ccache", version = "0.1.0" }
