[package]
name = "awol2005ex3-klist"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "klist"
path = "src/main.rs"

[dependencies]
kerberos-ccache = { path = "../kerberos-ccache", package = "awol2005ex3-kerberos-ccache", version = "0.4.1" }
kerberos-constants = { path = "../kerberos-constants", package = "awol2005ex3-kerberos-constants", version = "0.4.1" }
chrono = "=0.4.39"
